# dzx_269

./: README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json
client/src/: App.tsx
client/src/api/: index.ts
client/src/components/: ConversationDetail.tsx  CreateGroupModal.tsx  MessageInput.tsx  MessageList.tsx  SearchUserModal.tsx  Sidebar.tsx  index.ts
client/src/crypto/: index.ts  signal.ts  types.ts  utils.ts
client/src/db/: database.ts  index.ts  schema.ts
client/src/hooks/: index.ts  useChat.ts  useWebSocket.ts
client/src/pages/: Chat.tsx  Login.tsx  Register.tsx  index.ts
client/src/store/: auth.ts  chat.ts  index.ts
client/src/types/: index.ts
client/src/utils/: index.ts
server/: Cargo.toml
server/migrations/: 001_init.sql
server/src/: main.rs
server/src/config/: mod.rs
server/src/db/: mod.rs
server/src/handlers/: auth.rs  conversation.rs  group.rs  key.rs  mod.rs  user.rs
server/src/models/: conversation.rs  group.rs  key.rs  message.rs  mod.rs  user.rs
server/src/services/: auth.rs  conversation.rs  group.rs  key.rs  message.rs  mod.rs  user.rs
server/src/ws/: connection.rs  handler.rs  message.rs  mod.rs
