[package]
name = "dzx-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "runtime-tokio-native-tls", "chrono", "uuid", "macros"] }
redis = { version = "0.25", features = ["tokio-comp"] }
jsonwebtoken = "9"
bcrypt = "0.15"
argon2 = "0.5"
tokio-tungstenite = "0.22"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"
dotenv = "0.15"
validator = { version = "0.18", features = ["derive"] }
base64 = "0.22"
rand = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
